--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "require": {
         "php": ">=5.5.9",
         "laravel/framework": "5.1.*",
-        "vinkla/instagram": "^3.0"
+        "vinkla/instagram": "^3.0",
+        "bugsnag/bugsnag-laravel": "^1.6"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
